# savicam_tmod

./: .gitignore  AGENTS.md  README.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  ffi_exports.cpp
android/app/src/main/cpp/core/: nnapi_delegate.cpp  nnapi_delegate.h  tflite_runner.cpp  tflite_runner.h
android/app/src/main/cpp/vision/: byte_track.cpp  byte_track.h  depth_estimator.cpp  depth_estimator.h  ttc_calculator.cpp  ttc_calculator.h  yolov8n_engine.cpp  yolov8n_engine.h
apps/relap/android/: build.gradle.kts
apps/relap/android/app/: build.gradle.kts
apps/tmod/: pubspec.yaml
apps/tmod/android/app/: build.gradle.kts
apps/tmod/ios/Runner/: Info.plist
apps/tmod/lib/: app.dart  main.dart
apps/tmod/linux/: CMakeLists.txt
apps/tmod/test/: widget_test.dart
apps/tmod/web/: index.html
assets/models/: yolov8n_qat.tflite
cloud/fcm/: fcm_edge_function.ts
cloud/supabase/: .env.example
cloud/supabase/.temp/: linked-project.json
cloud/supabase/functions/: sos_fcm_trigger.sql
cloud/supabase/functions/fcm_edge_function/: index.ts
cloud/supabase/migrations/: 001_initial_schema.sql  seed_dev_data.sql
cloud/supabase/rls/: row_level_security.sql
docs/: architecture_lock.md  csdl_savicam_extracted.md  directory_tree.md  implementation_guide.md
docs/api_contracts/: supabase_schema.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/core/ffi_bindings/: c_structs.dart
lib/core/local_db/: sqlite_helper.dart
lib/core/local_db/entities/: offline_queue_item.dart
lib/core/network/: api_client.dart  websocket_manager.dart
lib/features/ai_agent/: intent_mapper.dart
lib/features/navigation/: navigation_controller.dart
lib/features/vision_alerts/: vision_alert_controller.dart
lib/ui/screens/: essential_screen.dart  settings_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
savicam_tmod/: NCKH_SaViCam.md  pubspec.yaml
savicam_tmod/android/app/: build.gradle.kts
savicam_tmod/android/app/src/main/cpp/: CMakeLists.txt  ffi_exports.cpp
savicam_tmod/android/app/src/main/cpp/core/: nnapi_delegate.cpp  tflite_runner.cpp
savicam_tmod/android/app/src/main/cpp/vision/: byte_track.cpp  byte_track.h  depth_estimator.cpp  depth_estimator.h  ttc_calculator.cpp  ttc_calculator.h  yolov8n_engine.cpp  yolov8n_engine.h
savicam_tmod/assets/dict/: fasttext_vi_core.json
savicam_tmod/assets/models/: minilm_l6_v2_int8.tflite
savicam_tmod/docs/: ffi_data_contract_v1.md
savicam_tmod/lib/: injection_container.dart  main.dart
savicam_tmod/lib/core/ffi_bindings/: c_structs.dart  class_taxonomy.dart  native_library.dart
savicam_tmod/lib/core/ffi_bridge/: bridge_round_trip_test_screen.dart  camera_ffi_bridge.dart  event_channel_risk_source.dart  ffi_bridge.dart  ffi_polling_risk_source.dart  method_channel_bridge.dart  risk_source.dart
savicam_tmod/lib/core/local_db/: macro_resolver.dart  sqlite_helper.dart
savicam_tmod/lib/core/services/: audio_haptic_manager.dart  file_storage_service.dart  headless_lifecycle_manager.dart  location_service.dart
savicam_tmod/lib/features/cloud_recognition/: cloud_recognition_controller.dart
savicam_tmod/lib/features/navigation/: graph_extractor.dart  map_download_service.dart  navigation_controller.dart  navigation_repository.dart  offline_graph_engine.dart
savicam_tmod/lib/features/sos_module/: sos_controller.dart
savicam_tmod/lib/features/telemetry/: location_tracking_repository.dart  watch_live_location_usecase.dart
savicam_tmod/lib/features/vision_alerts/: vision_alert_controller.dart
savicam_tmod/lib/ui/screens/: home_page_view.dart  navigation_screen.dart  recognition_screen.dart
savicam_tmod/lib/ui/theme/: accessibility_theme.dart
savicam_tmod/lib/ui/widgets/: sos_button.dart
savicam_tmod/linux/runner/: my_application.cc
savicam_tmod/macos/Flutter/: GeneratedPluginRegistrant.swift
savicam_tmod/test/features/ai_agent/: macro_resolver_test.dart
savicam_tmod/test/features/navigation/: bearing_test.dart  offline_graph_test.dart  spatial_grid_test.dart
savicam_tmod/web/: index.html  manifest.json
savicam_tmod/windows/: CMakeLists.txt
savicam_tmod/windows/runner/: Runner.rc
test/: widget_test.dart
web/: manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+45 files in other folders)
